2008-01-15  Thomas Moulard  <thomas@moulard.net>

	Use options parsing modules.
        urbi-console default values are now customizable through environment
        variables URBI_<FLAG> (for instance URBI_PORT).
	* configure.ac: Detect Boost.Program_options.
	* src/Makefile.am: Link urbi-console against Boost.Program_options.
	* src/console-server-options.cc: Handle urbi-console specific options. New.
	* src/console-server-options.hh: Idem. New.
	* src/console-server.cc: Use ConsoleServerOptions class to parse options.
	* src/console-server.hh: Add header for ConsoleServer class. New.

2008-01-15  Akim Demaille  <demaille@gostai.com>

	NEWS: inherits is deprecated.
	* NEWS: here.

2008-01-15  Akim Demaille  <demaille@gostai.com>

	Deprecate (dis)?inherits.
	* src/parser/utoken.l, src/parser/ugrammar.y: Here.
	Using an infamous hack to work around s/r conflicts that the
	straightforward fix creates.
	Requires tricky games with yyless.

2008-01-10  Akim Demaille  <demaille@gostai.com>

	Back port a fix.
	* src/uconnection.cc (initialize): Fix an iteration.
	From the k2 fix by Samuel Tardieu.

2008-01-08  Akim Demaille  <demaille@gostai.com>

	Prefer for to while.
	* src/uconnection.cc (UConnection::initialize): Here.
	And prefer snprintf to sprintf (but both are sick).

2008-01-07  Akim Demaille  <demaille@gostai.com>

	Missing "done".
	Update test suite.  Now *much* faster, and green.
	* src/uconnection.cc, src/uexpression.cc: Space changes.
	* src/userver.cc: Add a missing DEBUG message.

2008-01-07  Samuel Tardieu  <tardieu@gostai.com>

	Typo.
	* include/kernel/version.hh.in: Fix typo.

2008-01-07  Samuel Tardieu  <tardieu@gostai.com>

	Add warning about modifying ucomplaints.hh.
	* include/kernel/ucomplaints.hh: Add a note about keeping this file
	in sync with ucomplaints.cc.

2008-01-07  Samuel Tardieu  <tardieu@gostai.com>

	Explicitely require bison >= 2.3a+.
	* configure.ac: Require usage of bison 2.3a+ or later, as is done
	in k2 (needed for %code support).