@@ -21,6 +21,6 @@ AM_CXXFLAGS += $(WARNING_CXXFLAGS) $(PTHREAD_CFLAGS)
 
 # Add boost libraries.
 AM_CPPFLAGS += $(BOOST_CPPFLAGS)
-AM_LDFLAGS  += $(BOOST_THREAD_LDFLAGS)
+AM_LDFLAGS  += $(BOOST_THREAD_LDFLAGS) $(BOOST_PROGRAM_OPTIONS_LDFLAGS)
 # There is no AM_LIBADD.
-LIBS        += $(BOOST_THREAD_LIBS)
+LIBS        += $(BOOST_THREAD_LIBS) $(BOOST_PROGRAM_OPTIONS_LIBS)
